--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                 <div class="logo-container">
                     <div class="logo">
                         <!-- اینجا لوگوی شما قرار می‌گیرد -->
-                        <img src="logo.png" alt="MWT Zodiac Logo">
+                        <img src=" photo-output.jpeg" alt="MWT Zodiac Logo">
                     </div>
                     <div class="logo-text">MWT Zodiac</div>
                     
