--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
     <!-- صفحه اول با لوگو و متن انگیزشی -->
     <section class="hero-section" id="heroSection">
         <div class="logo-container">
-            <img src="logo.png" alt="آموزش فارکس - مهناز خورسند" class="logo">
+            <img src=" photo-output.jpeg" alt="آموزش فارکس - مهناز خورسند" class="logo">
         </div>
         <div class="motivation-box">
             <p class="motivation-text">
