--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
     <!-- صفحه اول با لوگو و متن انگیزشی -->
     <section class="hero-section" id="heroSection">
         <div class="logo-container">
-            <img src="logo.png" alt="آموزش فارکس - مهناز خورسند" class="logo">
+            <img src=" photo-output.jpeg" alt="آموزش فارکس - مهناز خورسند" class="logo">
             <div class="logo-text">Empowering your trade journey</div>
             <div class="logo-subtext">توانمندسازی سفر معاملاتی شما</div>
             <div class="logo-subtext">founder of MWT concept</div>
